# Orion

./: README.md
debian/: control  postinst  preinst
docs/avant-projet/01_Cadre-Objectif/: Cadrage.md  Objectifs.md
docs/avant-projet/02_Perimetre/: Contraintes.md  Fonctionnalites.md  Perimetre.md
docs/avant-projet/03_Faisabilite/: Etude-marche.md  Ressources.md
docs/gantt/: PTUT - ORION_INITIAL.gan
docs/git/: commit-best-practices.md  git-basics.md  orphan-branch.md
docs/pitch/: presentation.md  texte_pitch.md
scripts/: dump-local.sh  orion-control
site-vitrine/: WIP.html  _theme.snippet  about.html  comparatif.html  docs.html  features.html  index.html  legal.html  pricing.html  roadmap.html  robots.txt  script.js  style.css
src/: docker-compose.yml
src/API/: Dockerfile.api  package-lock.json  package.json  server.js
src/CLT/: Dockerfile.clt  entrypoint.sh  requirements.txt
src/CLT/app/: pyproject.toml
src/CLT/app/orion_scanner/: __init__.py  __main__.py  cli.py  collector_daemon.py  models.py
src/CLT/app/orion_scanner/db/: __init__.py  engine.py  schema.py  writer.py
src/CLT/app/orion_scanner/snmp/: __init__.py  check_arp.py  check_etherchannel.py  check_hsrp.py  check_interfaces.py  check_mac_table.py  check_metrics.py  check_routing.py  check_stp.py  check_topology.py  check_trunks.py  client.py  collector.py  entity.py  interfaces.py  system.py  topology.py  vlans.py
src/CLT/app/orion_scanner/utils/: __init__.py  logger.py  network.py
src/DB/: 01-init-orion.sql  02-data-orion.sql
src/WEB/: Dockerfile.web  entrypoint.sh  nginx.conf
(+20 files in other folders)
